# RFI-ladybug

./: .gitignore  CMakeLists.txt  README.md  environment.yml  main.cpp  receiver.py
docs/: documentation.md
